<resources>
    <string name="app_name">Sudoku</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_login">Log In</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_play">Play</string>
    <string name="str_rank">Rank</string>
    <string name="str_help">Help</string>
    <string name="str_about">About us</string>
    <string name="str_email">Email</string>
    <string name="str_retype">Retype password</string>
    <string name="str_apply">Apply</string>
    <string name="str_save">Save</string>
    <string name="str_signout">Sign Out</string>
    <string name="str_selectimage">Select image</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_reset">Reset Game</string>
    <string name="str_newgame">New Game</string>
    <string name="str_solution">Show solution</string>
    <string name="str_rememberme">Remember me</string>
</resources>
